--- a/index.html
+++ b/index.html
@@ -12,28 +12,16 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
+  
+<!-- ======
   * Template Name: Personal
   * Updated: Aug 30 2023 with Bootstrap v5.3.1
   * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  ========================================================  -->
 </head>
 
 <body>
@@ -82,7 +70,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.jpg" class="img-fluid" alt="">
+          <img src="assets/img/me.avif" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>programmer &amp; web Designer</h3>
@@ -246,7 +234,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-phone-lock-line" style="color: #5578ff;"></i>
+            <i class="ri-shield-keyhole-fill" style="color: #5578ff;"></i>
             <h3>cyber security</h3>
           </div>
         </div>
@@ -294,7 +282,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-heart-pulse-line" style="color: #b20969;"></i>
+            <i class="ri-heart-fill" style="color: #b20969;"></i>
             <h3>health care</h3>
           </div>
         </div>
@@ -457,12 +445,12 @@
 
         <div class="col-lg-6 col-md-10 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/fashion-world.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/fashion-world.avif" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>fashion store</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/fashion-world.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="fashion store"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/fashion-world.avif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="fashion store"><i class="bx bx-plus"></i></a>
                 <a href="https://ihsanurahman.github.io/fashion-world/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -471,12 +459,12 @@
 
         <div class=" col-lg-5 col-md-10 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/luqamens.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/luqamens.avif" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>luqamens store</h4>
               <p>web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/luqamens.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="luqamens store"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/luqamens.avif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="luqamens store"><i class="bx bx-plus"></i></a>
                 <a href="https://binarymagics.cf/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -485,12 +473,12 @@
 
         <div class="col-lg-5 col-md-10 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/calculator-web.png" class="img-fluid img-height" alt="">
+            <img src="assets/img/portfolio/calculator-web.avif" class="img-fluid img-height" alt="">
             <div class="portfolio-info">
               <h4>calculator</h4>
               <p>web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/calculator-web.png" data-gallery="portfolioGallery" class="img-height portfolio-lightbox" title="calculator web"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/calculator-web.avif" data-gallery="portfolioGallery" class="img-height portfolio-lightbox" title="calculator web"><i class="bx bx-plus"></i></a>
                 <a href="https://ihsanurahman.github.io/Calculator/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -498,12 +486,12 @@
         </div>
         <div class="col-lg-5 col-md-10 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-1.avif" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>java calculator</h4>
               <p>App</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="java calculator"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.avif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="java calculator"><i class="bx bx-plus"></i></a>
                 </div>
             </div>
           </div>
@@ -598,18 +586,31 @@
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
     Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
+  <!-- Vendor CSS Files -->
+ 
 </body>
+ 
+<link href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" rel="stylesheet"> <link
+rel="stylesheet"
+href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
+
+<link href="assets/css/style.css" rel="stylesheet">
+<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+
+<link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/js/glightbox.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/waypoints@4.0.1/lib/jquery.waypoints.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<!-- Template Main JS File -->
+<script src="assets/js/main.js"></script>
 </html>
