--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
 
- 
+ <link href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" rel="stylesheet"> <link
+rel="stylesheet"
+href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+
+<link href="assets/css/style.css" rel="stylesheet">
   <!-- Google Fonts -->
   
 <!-- ======
@@ -70,7 +76,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.avif" class="img-fluid" alt="">
+          <img src="assets/img/me.webp" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>programmer &amp; web Designer</h3>
@@ -445,12 +451,12 @@
 
         <div class="col-lg-6 col-md-10 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/fashion-world.avif" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/fashion-world.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>fashion store</h4>
               <p>Web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/fashion-world.avif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="fashion store"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/fashion-world.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="fashion store"><i class="bx bx-plus"></i></a>
                 <a href="https://ihsanurahman.github.io/fashion-world/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -459,12 +465,12 @@
 
         <div class=" col-lg-5 col-md-10 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/luqamens.avif" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/luqamens.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>luqamens store</h4>
               <p>web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/luqamens.avif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="luqamens store"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/luqamens.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="luqamens store"><i class="bx bx-plus"></i></a>
                 <a href="https://binarymagics.cf/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -473,12 +479,12 @@
 
         <div class="col-lg-5 col-md-10 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/calculator-web.avif" class="img-fluid img-height" alt="">
+            <img src="assets/img/portfolio/calculator-web.webp" class="img-fluid img-height" alt="">
             <div class="portfolio-info">
               <h4>calculator</h4>
               <p>web</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/calculator-web.avif" data-gallery="portfolioGallery" class="img-height portfolio-lightbox" title="calculator web"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/calculator-web.webp" data-gallery="portfolioGallery" class="img-height portfolio-lightbox" title="calculator web"><i class="bx bx-plus"></i></a>
                 <a href="https://ihsanurahman.github.io/Calculator/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -486,12 +492,12 @@
         </div>
         <div class="col-lg-5 col-md-10 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-1.avif" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>java calculator</h4>
               <p>App</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.avif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="java calculator"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="java calculator"><i class="bx bx-plus"></i></a>
                 </div>
             </div>
           </div>
@@ -591,13 +597,7 @@
   
 </body>
  
-<link href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" rel="stylesheet"> <link
-rel="stylesheet"
-href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-
-<link href="assets/css/style.css" rel="stylesheet">
 <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
