--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
 
 
 <link href="assets/css/style.css" rel="stylesheet">
-  <!-- Google Fonts -->
+ 
   
 <!-- ======
   * Template Name: Personal
@@ -598,6 +598,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
 </body>
  
 
+
 <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
@@ -610,7 +611,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
