--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="https://twitter.com/IhsanuRahman" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100069976629368" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/ihsanu_rahman/" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/ihsanu-rahman-148653238/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://twitter.com/IhsanuRahman" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100069976629368" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/ihsanu_rahman/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/ihsanu-rahman-148653238/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -457,7 +457,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/fashion-world.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="fashion store"><i class="bx bx-plus"></i></a>
-                <a href="https://ihsanurahman.github.io/fashion-world/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
+                <a href="https://ihsanurahman.github.io/fashion-world/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -471,7 +471,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <p>web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/luqamens.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="luqamens store"><i class="bx bx-plus"></i></a>
-                <a href="https://binarymagics.cf/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
+                <a href="https://binarymagics.cf/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -485,7 +485,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <p>web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/calculator-web.webp" data-gallery="portfolioGallery" class="img-height portfolio-lightbox" title="calculator web"><i class="bx bx-plus"></i></a>
-                <a href="https://ihsanurahman.github.io/Calculator/" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
+                <a href="https://ihsanurahman.github.io/Calculator/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -497,7 +497,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <h4>java calculator</h4>
               <p>App</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="java calculator"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.webp"  data-gallery="portfolioGallery" class="portfolio-lightbox" title="java calculator"><i class="bx bx-plus"></i></a>
                 </div>
             </div>
           </div>
@@ -532,11 +532,11 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://twitter.com/IhsanuRahman" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="https://www.facebook.com/profile.php?id=100069976629368" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/ihsanu_rahman/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://twitter.com/IhsanuRahman" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100069976629368" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/ihsanu_rahman/" class="instagram"target="_blank"><i class="bi bi-instagram"></i></a>
               
-              <a href="https://www.linkedin.com/in/ihsanu-rahman-148653238/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/ihsanu-rahman-148653238/" class="linkedin"target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
