--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/movie_gallery.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="movie gallery"><i class="bx bx-plus"></i></a>
-                <a href="https://ihsanurahman.github.io/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
+                <a href="https://moviegallery.pythonanywhere.com/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
