--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/movie_gallery.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="movie gallery"><i class="bx bx-plus"></i></a>
-                <a href="https://moviegallery.pythonanywhere.com/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
+                <a href="https://moviegallery.pythonanywhere.com/" target="_blank" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -411,7 +411,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <p>Web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/fashion-world.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="fashion store"><i class="bx bx-plus"></i></a>
-                <a href="https://ihsanurahman.github.io/fashion-world/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
+                <a href="https://ihsanurahman.github.io/fashion-world/" target="_blank" target="_blank" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -425,7 +425,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <p>web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/luqamens.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="luqamens store"><i class="bx bx-plus"></i></a>
-                <a href="https://binarymagics.cf/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
+                <a href="https://binarymagics.cf/" target="_blank" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -439,7 +439,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <p>web</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/calculator-web.webp" data-gallery="portfolioGallery" class="img-height portfolio-lightbox" title="calculator web"><i class="bx bx-plus"></i></a>
-                <a href="https://ihsanurahman.github.io/Calculator/" target="_blank" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="link to the page"><i class="bx bx-link"></i></a>
+                <a href="https://ihsanurahman.github.io/Calculator/" target="_blank" title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
