--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
         <a href="https://www.facebook.com/profile.php?id=100069976629368" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/ihsanu_rahman/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/ihsanu-rahman-148653238/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://stackoverflow.com/users/18028637/ihsanu-rahman" target="_blank" class="stackoverflow"><i class="bi bi-stack-overflow"></i></a>
       </div>
 
     </div>
@@ -480,6 +481,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
               <a href="https://www.instagram.com/ihsanu_rahman/" class="instagram"target="_blank"><i class="bi bi-instagram"></i></a>
               
               <a href="https://www.linkedin.com/in/ihsanu-rahman-148653238/" class="linkedin"target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://stackoverflow.com/users/18028637/ihsanu-rahman" target="_blank" class="stackoverflow"><i class="bi bi-stack-overflow"></i></a>
             </div>
           </div>
         </div>
