--- a/index.html
+++ b/index.html
@@ -92,23 +92,24 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>29 january 2005</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://ihsanurahman.github.io/Ihsan/</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                  <span>https://ihsanurahman.github.io/Ihsan/</span>
+                </li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8089920057</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>kozhikode, kerala</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>18</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>plustwo</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ihsanurahman8055@gmail.com</span>
                 </li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>maybe</span></li>
               </ul>
             </div>
           </div>
           <p>
-            I have 2 years of experience in programming and know another thing in Information Technology
+            I am really enthusiastic in the field of IT and computer science
           </p>
         </div>
       </div>
@@ -160,14 +161,14 @@
             </div>
           </div>
           <div class="progress">
-            <span class="skill">python <i class="val">70%</i></span>
+            <span class="skill">python <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
               </div>
             </div>
           </div>
           <div class="progress">
-            <span class="skill">react<i class="val">65%</i></span>
+            <span class="skill">react<i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
               </div>
@@ -344,7 +345,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>internship</h4>
+            <h4>Training</h4>
             <h5> Present</h5>
             <p><em>Brocamp by remote</em></p>
             <p>
@@ -371,8 +372,8 @@
         <p>My Services</p>
       </div>
 
-      <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+      <div class="row ">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch  mt-4">
           <div class="icon-box">
             <div class="icon"><i class="ri-pages-line"></i></div>
             <h4>Static web designing</h4>
@@ -381,16 +382,34 @@
         </div>
 
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch  mt-4 ">
           <div class="icon-box">
-            <div class="icon"><i class="ri-flutter-fill"></i></div>
+            <div class="icon"><i class="ri-server-fill"></i></div>
             <h4>Backend web development</h4>
-            <p>can develop develop serverside development using django</p>
+            <p>can develop serverside development using django</p>
           </div>
         </div>
-
-
-
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch  mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="ri-home-gear-fill"></i></div>
+            <h4>API  development</h4>
+            <p>can develop API using django and django rest framework</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch  mt-4 ">
+          <div class="icon-box">
+            <div class="icon"><i class="ri-reactjs-fill"></i></div>
+            <h4>Frontend  development</h4>
+            <p>can develop frontend application using react.js</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch  mt-4 ">
+          <div class="icon-box">
+            <div class="icon"><i class="ri-window-2-fill"></i></div>
+            <h4>Full Stack Web Application</h4>
+            <p>can develop full Stack Application using python django as backend and react.js as frontend</p>
+          </div>
+        </div>
       </div>
 
     </div>
@@ -407,13 +426,44 @@
 
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
-          
+
         </div>
       </div>
 
       <div class="row portfolio-container ps-2 ps-md-5">
 
+        
 
+        <div class="col-lg-6 col-md-10 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/ecommerce.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>ecommerce</h4>
+              <p>Web</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ecommerce.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="ihsan ecommerce"><i class="bx bx-plus"></i></a>
+                <a href="https://ihsan.website" target="_blank" target="_blank" title="link to the page"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-5 col-md-10 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/media-capital.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>media capital</h4>
+              <p>Web</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/media-capital.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="media capital"><i class="bx bx-plus"></i></a>
+                <a href="https://mediacapital.space" target="_blank" target="_blank" title="link to the page"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-5 col-md-10 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/movie_gallery.webp" class="img-fluid" alt="">
@@ -425,21 +475,6 @@
                   class="portfolio-lightbox" title="movie gallery"><i class="bx bx-plus"></i></a>
                 <a href="https://moviegallery.pythonanywhere.com/" target="_blank" title="link to the page"><i
                     class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-10 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/ecommerce.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>ecommerce</h4>
-              <p>Web</p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/ecommerce.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="ihsan ecommerce"><i class="bx bx-plus"></i></a>
-                <a href="https://ihsan.website" target="_blank" target="_blank"
-                  title="link to the page"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
