my img,age updater,updated resume,updated about

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Ihsan</title>
-  <meta content="" name="description">
+  <meta content="Personal website of Ihsanu Rahman TP" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -101,7 +101,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span id="age-display"></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>plustwo</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ihsanurahman8055@gmail.com</span>
                 </li>
@@ -325,20 +325,16 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
 
-            <p><em>As a recent graduate with a Plus Two in Computer Science, I am eager to launch my career as a web
-                designer and programmer. My educational background and activities equipped me with a solid foundation in
-                programming languages, algorithms, and problem-solving, and I am excited to apply these skills to the
-                world of web development and programming.</em></p>
+            <p><em>I have completed my Plus Two in Computer Science and am currently pursuing a BSc in Computer Science. During a two-year gap after Plus Two, I focused on building practical skills in programming and web development through a non-certification training program. This hands-on learning has strengthened my knowledge in programming languages, algorithms, and problem-solving, and I am eager to apply these skills in real-world web development projects.</em></p>
 
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Plustwo in Computer Science</h4>
-            <h5>2021 - 2023</h5>
-            <p><em>PVS Higher Secondery School, Erannikal, Kozhikode</em></p>
-            <p>I passed my plus one and plus two in pvs and it is last education will completed.
-              with computer science i studied chemistry,maths,physics,malayalam and english </p>
+            <h4>Bsc Computer Science</h4>
+            <h5>2025 - present</h5>
+            <p><em>Collage of Applied Science, kiliyanad, Kozhikode</em></p>
+            <p>Currently pursuing a degree in Computer Science with a strong interest in exploring opportunities in this field.</p>
           </div>
 
         </div>
@@ -346,7 +342,7 @@
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
             <h4>Training</h4>
-            <h5> Present</h5>
+            <h5> 2023 - 2025</h5>
             <p><em>Brocamp by remote</em></p>
             <p>
             <ul>
